[gd_scene load_steps=7 format=3 uid="uid://bswgmclohuqui"]

[ext_resource type="Script" path="res://content/system/room/room.gd" id="1_fccq0"]
[ext_resource type="Script" path="res://content/functions/clickable.gd" id="1_ugebq"]
[ext_resource type="Material" uid="uid://bbx6fv7jq50tr" path="res://content/system/room/walls.tres" id="3_al1ev"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_08sv0"]

[sub_resource type="ArrayMesh" id="ArrayMesh_7dibq"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_ap613"]

[node name="Room" type="Node3D"]
script = ExtResource("1_fccq0")

[node name="Ground" type="StaticBody3D" parent="."]
collision_layer = 24
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("WorldBoundaryShape3D_08sv0")

[node name="Clickable" type="Node" parent="Ground"]
script = ExtResource("1_ugebq")

[node name="WallCorners" type="Node3D" parent="."]

[node name="WallEdges" type="Node3D" parent="."]

[node name="WallMesh" type="MeshInstance3D" parent="."]
material_override = ExtResource("3_al1ev")
mesh = SubResource("ArrayMesh_7dibq")

[node name="WallCollisions" type="Node3D" parent="."]

[node name="Celing" type="StaticBody3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 3.07, 0)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Celing"]
shape = SubResource("WorldBoundaryShape3D_ap613")
